Fixed old tests, implemented a few new tests